<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:background="@drawable/item_shape"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.235">

        <EditText
            android:id="@+id/firstVocabEdit"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/item_shape"
            android:backgroundTint="@color/blue_light"
            android:fontFamily="@font/alata"
            android:hint="@string/english_word"
            android:maxLength="40"
            android:text=""
            android:textSize="20sp" />

        <EditText
            android:id="@+id/secondVocabEdit"
            android:layout_width="220dp"
            android:layout_height="50dp"
            android:background="@drawable/item_shape"
            android:backgroundTint="@color/blue_light"
            android:fontFamily="@font/alata"
            android:hint="@string/german_word"
            android:maxLength="40"
            android:text=""
            android:textSize="20sp" />

        <Button
            android:id="@+id/confirmVocabBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="@color/blue_light"
            android:text="@string/confirm" />

        <Button
            android:id="@+id/cancelVocabBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue_light"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/deleteVocabBtn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/blue_light"
            android:text="@string/delete" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>